color toolbar, iconos, footer removed

--- a/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.html
+++ b/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.html
@@ -1,5 +1,6 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="cabecera ion-text-center">
+    <ion-icon name="home-outline" slot="start" class="inicio" (click)="irInicio();"></ion-icon>
     <ion-title>Contraseña</ion-title>
     <!--Imagen de usuario logueado-->
     <ion-avatar slot="end" id="usu" button (click)="mostrarMenu()">
@@ -14,9 +15,9 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row class="ion-justify-content-center ion-margin-top">
-      <ion-col size-lg="8">
+      <ion-col size-lg="6">
         <ion-card>
-          <img src="../../../assets/img/bgTabletCafe.png" id="imgCard"/>
+          <img src="../../../assets/img/changePass.jpg" id="imgCard"/>
           <ion-card-content>
             <form [formGroup]="passForm" *ngIf="this.passForm">
               <!-- Pass actual -->
@@ -52,8 +53,8 @@
               </ion-item>
 
               <ion-button
-                
-                class="btnColor"
+                color="success"
+                class="btnColo"
                 expand="block"
                 [disabled]="passForm.invalid"
                 (click)="update();"
@@ -67,10 +68,10 @@
   </ion-grid>
 </ion-content>
 
-<!-- Footer-->
+<!-- Footer->
 <ion-footer>
   <ion-toolbar>
-    <!-- Gestor opciones -->
+    <!-- Gestor opciones ->
     <ion-tabs>
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
         <ion-tab-button (click)="irInicio();">
@@ -78,6 +79,6 @@
         </ion-tab-button>
       </ion-tab-bar>
     </ion-tabs>
-    <!-- Fin gestor opciones -->
+    <!-- Fin gestor opciones
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
