--- a/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.scss
+++ b/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.scss
@@ -1,7 +1,7 @@
 ion-avatar {
     max-width: 40px;
     max-height: 40px;
-    margin-right: 10px;
+    margin-right: 5vw;
 }
 
 ion-icon {
@@ -15,4 +15,14 @@ ion-icon {
 
 .btnColor {
     --background: #cc6b41;
+}
+
+.cabecera {
+     --background: #cc6b41;
+     color: white;
+ }
+
+.inicio {
+    margin-left: 5vw;
+    font-size: 20px;
 }
