--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
@@ -1,6 +1,7 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title slot="start">Nuevo poyecto</ion-title>
+  <ion-toolbar class="cabecera ion-text-center" color="primary">
+    <ion-icon name="home-outline" slot="start" class="inicio" (click)="irInicioGestor();"></ion-icon>
+    <ion-title>Nuevo proyecto</ion-title>
     <!--Imagen de usuario logueado-->
     <ion-avatar slot="end" id="usu" button (click)="mostrarMenu()">
       <img src="{{ usuarioAutenticado != null && usuarioAutenticado.img != null ? 'data:image/png;base64,' + usuarioAutenticado.img : 'assets/img/genericUser.jpg'}}" alt="Imagen usuario">
@@ -126,7 +127,7 @@
   </form>
   </ion-card-content>
 </ion-content>
-
+<!--
 <ion-footer>
   <ion-toolbar >
     <ion-tabs>
@@ -139,14 +140,15 @@
         <ion-tab-button (click)="irInicioGestor();">
           <ion-icon name="home-outline"></ion-icon>
         </ion-tab-button>
-    <!--
+    <!-
         <ion-tab-button tab="tab3">
           <ion-icon name="menu-outline"></ion-icon>
           
-        </ion-tab-button>-->
+        </ion-tab-button>->
       </ion-tab-bar>
     
     </ion-tabs>
   </ion-toolbar>
 
 </ion-footer>
+-->
