--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.scss
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.scss
@@ -6,8 +6,9 @@ ion-avatar {
 
 ion-badge {
     border-radius: 50%;
-    background-color: #e0ac08;
+    //background-color: --success;
     padding-right: 5px;
+    padding-left: 5px;
     margin-right: 20px;
     font-size: 0.7rem;
 }
@@ -18,4 +19,14 @@ ion-datetime {
 ion-icon {
   cursor: pointer;
   font-size: 16px;
+}
+
+.cabecera {
+  //--background: #cc6b41;
+  color: white;
+}
+
+.inicio {
+ margin-left: 5vw;
+ font-size: 20px;
 }
