--- a/scrip-trad/src/app/pages/perfil/perfil.page.scss
+++ b/scrip-trad/src/app/pages/perfil/perfil.page.scss
@@ -30,6 +30,12 @@ ion-icon {
     font-size: 16px;
 }
 
-.btnColor {
+.cabecera {
     --background: #cc6b41;
+    color: white;
+}
+
+.inicio {
+   margin-left: 5vw;
+   font-size: 20px;
 }
