--- a/scrip-trad/src/theme/variables.scss
+++ b/scrip-trad/src/theme/variables.scss
@@ -4,7 +4,7 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #cc6b41;//#bd283c;
+  --ion-color-primary: #f27b1f;//#bd283c;
   --ion-color-primary-rgb: 189, 40, 60;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
